--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ body {
 
 .participant-name {
   font-weight: 600;
-  display: block;
+  display: block !important;
   margin-bottom: 2px;
   line-height: 1.2;
 }
@@ -90,7 +90,7 @@ body {
 .participant-mobile {
   font-size: 12px;
   color: #555;
-  display: block;
+  display: block !important;
   line-height: 1.2;
 }
 
